--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ input[type=button] {
 }
 
 .bg {
-    background-image: url(/css/bg.jpg);
+    background-image: url(css/bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
